--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,15 @@
-# Compiled class file
-*.class
-
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+.classpath
+#.project
+.settings/
+target/
+/.apt_generated/
+.idea
+.idea/.name
+.idea/misc.xml
+.idea/workspace.xml
+.idea/compiler.xml
+.idea/encodings.xml
+.idea/vcs.xml
+src/main/java/*.png
+*.iml
+out/
