--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 
   <groupId>kettle-neo4j</groupId>
   <artifactId>kettle-neo4j-core</artifactId>
-  <version>1.0.3</version>
+  <version>2.0.0</version>
   <name>${project.artifactId}</name>
   <description>Kettle Neo4j core library</description>
   <licenses>
@@ -25,15 +25,8 @@
     <pentaho-kettle.version>8.1-SNAPSHOT</pentaho-kettle.version>
     <mockito-all.version>1.9.5</mockito-all.version>
     <junit.version>4.4</junit.version>
+    <neo4j.driver.version>4.0.0</neo4j.driver.version>
   </properties>
-
-  <repositories>
-    <repository>
-      <id>eclipse-maven-repo</id>
-      <name>Eclipse Maven</name>
-      <url>https://mvnrepository.com</url>
-    </repository>
-  </repositories>
 
   <dependencies>
 
@@ -50,7 +43,7 @@
     <dependency>
       <groupId>org.neo4j.driver</groupId>
       <artifactId>neo4j-java-driver</artifactId>
-      <version>1.7.3</version>
+      <version>${neo4j.driver.version}</version>
     </dependency>
     <dependency>
       <groupId>com.google.code.gson</groupId>
@@ -126,7 +119,7 @@
       <dependency>
         <groupId>org.neo4j.driver</groupId>
         <artifactId>neo4j-java-driver</artifactId>
-        <version>1.7.3</version>
+        <version>${neo4j.driver.version}</version>
       </dependency>
       <dependency>
         <groupId>com.google.code.gson</groupId>
