--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,12 @@
   <parent>
     <groupId>org.pentaho</groupId>
     <artifactId>pentaho-ce-jar-parent-pom</artifactId>
-    <version>8.1-SNAPSHOT</version>
+    <version>8.2.0.7-719</version>
   </parent>
 
   <groupId>kettle-neo4j</groupId>
   <artifactId>kettle-neo4j-core</artifactId>
-  <version>2.0.2</version>
+  <version>2.0.3</version>
   <name>${project.artifactId}</name>
   <description>Kettle Neo4j core library</description>
   <licenses>
@@ -22,7 +22,7 @@
     </license>
   </licenses>
   <properties>
-    <pentaho-kettle.version>8.1-SNAPSHOT</pentaho-kettle.version>
+    <pentaho-kettle.version>8.2.0.7-719</pentaho-kettle.version>
     <mockito-all.version>1.9.5</mockito-all.version>
     <junit.version>4.4</junit.version>
     <neo4j.driver.version>4.0.0</neo4j.driver.version>
